--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:maxImageSize="28dp"
+        android:scaleType="center"
+        app:backgroundTint="@color/design_default_color_primary"
+        app:srcCompat="@drawable/navigation" />
 
 </android.support.design.widget.CoordinatorLayout>
