--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         android:layout_margin="@dimen/fab_margin"
         app:maxImageSize="28dp"
         android:scaleType="center"
-        app:backgroundTint="@color/design_default_color_primary"
+        app:backgroundTint="@color/colorPrimary"
         app:srcCompat="@drawable/navigation" />
 
 </android.support.design.widget.CoordinatorLayout>
