--- a/app/src/main/res/layout/cafe_menu_item_list.xml
+++ b/app/src/main/res/layout/cafe_menu_item_list.xml
@@ -1,26 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="15dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/cafeMenuItemNameTextView"
+        android:id="@+id/cafeMenuCategoryTitleTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:paddingBottom="10dp"
+        android:paddingBottom="5dp"
         android:text="Name"
-        android:textColor="@android:color/black"
-        android:textSize="17sp"/>
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"/>
 
     <TextView
-        android:id="@+id/cafeMenuItemPriceTextView"
+        android:id="@+id/cafeMenuCategoryDetailTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/cafeMenuItemNameTextView"
+        android:layout_below="@+id/cafeMenuCategoryTitleTextView"
+        android:layout_toRightOf="@id/cafeMenuCategoryImageView"
+        android:layout_centerVertical="true"
+        android:paddingLeft="7dp"
+        android:paddingTop="2dp"
         android:text="£1.00"
         android:textSize="15sp"/>
+
+    <ImageView
+        android:id="@+id/cafeMenuCategoryImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cafeMenuCategoryTitleTextView"
+        android:tint="@color/colorPrimary"
+        app:srcCompat="@drawable/food_category_6"></ImageView>
 
 </RelativeLayout>
