--- a/app/src/main/res/layout/fragment_cafe.xml
+++ b/app/src/main/res/layout/fragment_cafe.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:id="@+id/cafe_list_view"
+        android:id="@+id/cafe_menu_category_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </RelativeLayout>
