--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -11,13 +11,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:cropToPadding="true"
-        android:src="@drawable/USBHomeScreen"
+        android:scaleType="centerCrop"
+        android:src="@drawable/usb_hero"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        tools:src="@drawable/USBHomeScreen" />
+        tools:src="@drawable/usb_hero" />
 
 </android.support.constraint.ConstraintLayout>
