--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#013963</color>
     <color name="colorPrimaryDark">#012F52</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorBlack">#000000</color>
 </resources>
