--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,22 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="fab_margin">16dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="item_offset">10dp</dimen>
+    <dimen name="detail_backdrop_height">250dp</dimen>
+    <dimen name="backdrop_title">30dp</dimen>
+    <dimen name="backdrop_subtitle">18dp</dimen>
+    <dimen name="card_margin">5dp</dimen>
+    <dimen name="card_navigation_radius">0dp</dimen>
+    <dimen name="navigation_direction_image_height">60dp</dimen>
+    <dimen name="navigation_direction_image_width">60dp</dimen>
+    <dimen name="navigation_direction_text_padding">20dp</dimen>
+    <dimen name="navigation_direction_text">15dp</dimen>
+    <dimen name="navigation_distance_text_padding">20dp</dimen>
+    <dimen name="navigation_distance_text">15dp</dimen>
 </resources>
