--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
+    <!--default screen margins, per the Android Design guidelines start-->
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
@@ -11,12 +11,26 @@
     <dimen name="detail_backdrop_height">250dp</dimen>
     <dimen name="backdrop_title">30dp</dimen>
     <dimen name="backdrop_subtitle">18dp</dimen>
+
     <dimen name="card_margin">5dp</dimen>
     <dimen name="card_navigation_radius">0dp</dimen>
-    <dimen name="navigation_direction_image_height">60dp</dimen>
-    <dimen name="navigation_direction_image_width">60dp</dimen>
+    <!--defaults end-->
+
+    <!--navigation start-->
+    <dimen name="navigation_direction_image_height">50dp</dimen>
+    <dimen name="navigation_direction_image_width">50dp</dimen>
     <dimen name="navigation_direction_text_padding">20dp</dimen>
     <dimen name="navigation_direction_text">15dp</dimen>
     <dimen name="navigation_distance_text_padding">20dp</dimen>
     <dimen name="navigation_distance_text">15dp</dimen>
+    <dimen name="navigation_distance_text_width">10dp</dimen>
+
+    <dimen name="tour_location_image_height">140dp</dimen>
+    <dimen name="tour_location_image_width">60dp</dimen>
+    <dimen name="tour_location_image_padding">10dp</dimen>
+    <dimen name="tour_description_text_padding">20dp</dimen>
+    <dimen name="tour_description_text">15dp</dimen>
+    <dimen name="tour_name_text_padding">20dp</dimen>
+    <dimen name="tour_name_text">15dp</dimen>
+    <!--navigation end-->
 </resources>
