--- a/app/src/main/res/layout/direction_card_view.xml
+++ b/app/src/main/res/layout/direction_card_view.xml
@@ -23,11 +23,13 @@
                 android:layout_height="@dimen/navigation_direction_image_height"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="false"
+                android:gravity="center"
+                android:layout_marginTop="@dimen/navigation_direction_image_margin"
                 android:scaleType="fitXY" />
 
             <TextView
                 android:id="@+id/navigation_distance_text"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/navigation_distance_text_width"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@id/navigation_direction_image"
                 android:gravity="center"
@@ -40,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@id/navigation_distance_text"
-                android:gravity="center"
+                android:gravity="left"
                 android:padding="@dimen/navigation_direction_text_padding"
                 android:textColor="@color/colorBlack"
                 android:textSize="@dimen/navigation_direction_text" />
