--- a/app/src/main/res/layout/list_search_result.xml
+++ b/app/src/main/res/layout/list_search_result.xml
@@ -5,23 +5,51 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/searchResultTitleTextView"
-        android:layout_width="match_parent"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/searchResultInfoCell"
+        android:padding="5dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:paddingBottom="10dp"
-        android:text="Name"
-        android:textColor="@android:color/black"
-        android:textSize="17sp"/>
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/searchResultTitleTextView"
+            android:layout_width="wrap_content"
+            android:gravity="left"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:paddingBottom="10dp"
+            android:text="Name"
+            android:textColor="@android:color/black"
+            android:textSize="17sp"/>
 
-    <TextView
-        android:id="@+id/searchResultDetailTextView"
-        android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/searchResultDetailTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/searchResultTitleTextView"
+            android:layout_marginTop="0dp"
+            android:text="£1.00"
+            android:textSize="15sp" />
+
+    </RelativeLayout>
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:padding="5dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/searchResultTitleTextView"
-        android:layout_marginTop="0dp"
-        android:text="£1.00"
-        android:textSize="15sp" />
+        android:layout_alignRight="@id/searchResultInfoCell"
+        android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/searchResultNavigationIcon"
+            android:layout_width="@dimen/navigation_direction_image_width"
+            android:layout_height="@dimen/navigation_direction_image_height"
+            android:layout_marginTop="@dimen/navigation_direction_image_margin"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/navigation_dark"
+            android:clickable="true"
+            android:scaleType="fitXY"
+            android:tooltipText="Navigate here" />
+
+    </RelativeLayout>
 </RelativeLayout>
