--- a/app/src/main/res/layout/card_view_staff_member_title.xml
+++ b/app/src/main/res/layout/card_view_staff_member_title.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="100dp">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="11dp">
 
     <ImageView
         android:id="@+id/staffMemberProfilePictureImageView"
@@ -24,11 +25,16 @@
         android:layout_alignParentBottom="true"
         android:layout_alignWithParentIfMissing="true"
         android:layout_toRightOf="@id/staffMemberProfilePictureImageView"
-        android:layout_marginLeft="10dp"
-        android:paddingTop="18dp"
-        android:paddingBottom="20dp"
-        android:gravity="center_vertical"
+        android:layout_marginLeft="12dp"
+        android:paddingTop="34dp"
+        android:paddingBottom="34dp"
         android:text="Staff Member Name"
         android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#E8E8E8"
+        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
