Fixed opening hours colour

--- a/app/src/main/res/layout/header_view_cafe.xml
+++ b/app/src/main/res/layout/header_view_cafe.xml
@@ -39,7 +39,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="0dp"
             android:text="Open Now"
-            android:textColor="#66BC60"
+            android:textColor="@color/colorOpen"
             android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"/>
     </RelativeLayout>
 </LinearLayout>
