--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -2,8 +2,18 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ListView
-        android:id="@+id/search_results_list_view"
+    <TextView
+        android:id="@+id/searchNavigationHint"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="@dimen/search_navigation_hint"
+        android:text="@string/secondInstanceHint"
+        android:textColor="@color/colorWhite"
+        android:textSize="16sp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"/>
+    <ListView
+        android:id="@+id/searchResultsListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/searchNavigationHint"/>
 </RelativeLayout>
