--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,18 +21,18 @@
     <dimen name="navigation_direction_image_width">50dp</dimen>
     <dimen name="navigation_direction_image_margin">5dp</dimen>
     <dimen name="navigation_direction_text_padding">20dp</dimen>
-    <dimen name="navigation_direction_text">15dp</dimen>
+    <dimen name="navigation_direction_text">15sp</dimen>
     <dimen name="navigation_distance_text_padding">20dp</dimen>
-    <dimen name="navigation_distance_text">15dp</dimen>
+    <dimen name="navigation_distance_text">15sp</dimen>
     <dimen name="navigation_distance_text_width">60dp</dimen>
 
     <dimen name="tour_location_image_height">140dp</dimen>
     <dimen name="tour_location_image_width">60dp</dimen>
     <dimen name="tour_location_image_padding">10dp</dimen>
     <dimen name="tour_description_text_padding">20dp</dimen>
-    <dimen name="tour_description_text">15dp</dimen>
+    <dimen name="tour_description_text">15sp</dimen>
     <dimen name="tour_name_text_padding">20dp</dimen>
-    <dimen name="tour_name_text">15dp</dimen>
+    <dimen name="tour_name_text">15sp</dimen>
 
     <dimen name="navigation_info_bar_height">70dp</dimen>
     <dimen name="navigation_info_tag_width">70dp</dimen>
