--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="colorOpen">#66BC60</color>
     <color name="colorClosed">#E53F39</color>
     <color name="colorWhite">#ffffff</color>
-    <color name="colorGray">#bebebe</color>
+    <color name="colorGray">#5f5f5f</color>
 </resources>
