--- a/app/src/main/res/layout/card_view_staff_member_contact.xml
+++ b/app/src/main/res/layout/card_view_staff_member_contact.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="20dp"
+    android:layout_marginBottom="20dp">
 
     <ImageView
         android:id="@+id/staffMemberContactImageView"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_centerVertical="true"
-        android:layout_marginRight="6dip"
+        android:layout_marginRight="6dp"
         android:layout_marginLeft="15dp"
         android:tint="@color/colorPrimary"
         android:src="@drawable/email" />
@@ -20,7 +22,6 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
-        android:layout_alignWithParentIfMissing="true"
         android:layout_toRightOf="@id/staffMemberContactImageView"
         android:layout_marginLeft="10dp"
         android:gravity="center_vertical"
