--- a/app/src/main/res/layout/list_search_result.xml
+++ b/app/src/main/res/layout/list_search_result.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/searchResultInfoCell"
         android:layout_width="wrap_content"
@@ -20,7 +19,6 @@
             android:text="Name"
             android:textColor="@android:color/black"
             android:textSize="17sp"/>
-
         <TextView
             android:id="@+id/searchResultDetailTextView"
             android:layout_width="match_parent"
@@ -28,17 +26,14 @@
             android:layout_below="@+id/searchResultTitleTextView"
             android:layout_marginTop="0dp"
             android:text="£1.00"
-            android:textSize="15sp" />
-
+            android:textSize="15sp"/>
     </RelativeLayout>
-
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@id/searchResultInfoCell"
         android:layout_centerVertical="true"
         android:orientation="vertical">
-
         <ImageView
             android:id="@+id/searchResultNavigationIcon"
             android:layout_width="@dimen/search_navigation_image_scale"
@@ -48,7 +43,7 @@
             android:tint="@color/colorPrimary"
             android:clickable="true"
             android:scaleType="fitXY"
-            android:tooltipText="Navigate here" />
+            android:tooltipText="@string/navigationTooltip"/>
 
     </RelativeLayout>
 </RelativeLayout>
