--- a/app/src/main/res/layout/card_view_staff_member_contact.xml
+++ b/app/src/main/res/layout/card_view_staff_member_contact.xml
@@ -1,32 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="20dp"
-    android:layout_marginBottom="20dp">
-
-    <ImageView
-        android:id="@+id/staffMemberContactImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="6dp"
-        android:layout_marginLeft="15dp"
-        android:paddingTop="5dp"
-        android:tint="@color/colorPrimary"
-        android:src="@drawable/email" />
-
-    <TextView
-        android:id="@+id/staffMemberContactTextView"
+    android:layout_height="wrap_content">
+    <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@id/staffMemberContactImageView"
-        android:layout_marginLeft="10dp"
-        android:gravity="center_vertical"
-        android:text="developer@newcastle.ac.uk"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
-
+        android:layout_height="fill_parent"
+        android:id="@+id/staffMemberContactSelectionView"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp">
+        <ImageView
+            android:id="@+id/staffMemberContactImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="6dp"
+            android:layout_marginLeft="15dp"
+            android:tint="@color/colorPrimary"
+            android:src="@drawable/email"/>
+        <TextView
+            android:id="@+id/staffMemberContactTextView"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_toRightOf="@id/staffMemberContactImageView"
+            android:layout_marginLeft="10dp"
+            android:gravity="center_vertical"
+            android:text="developer@newcastle.ac.uk"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+    </RelativeLayout>
 </RelativeLayout>
